--- a/Deploy/composer.json
+++ b/Deploy/composer.json
@@ -8,8 +8,10 @@
         "php": "^7.1.3",
         "doctrine/dbal": "^2.7",
         "fideloper/proxy": "^4.0",
+        "khill/lavacharts": "3.1.*",
         "laravel/framework": "5.6.*",
         "laravel/tinker": "^1.0",
+        "laravelcollective/html": "^5.3.0",
         "maatwebsite/excel": "~2.1.0"
     },
     "require-dev": {
